# pruner

./: Cargo.toml  Justfile  README.md
crates/cli/: Cargo.toml  Justfile
crates/cli/src/: config.rs
crates/cli/src/api/: format.rs  grammar.rs  ignore.rs  injections.rs  mod.rs  queries.rs
crates/cli/src/api/directives/: escape.rs  gsub.rs  indented.rs  mod.rs  offset.rs  trim.rs
crates/cli/src/commands/: format.rs
crates/cli/tests/: conditional_formatters_test.rs  config_test.rs  directives_test.rs  format_command_test.rs  format_files_test.rs  ignore_test.rs  injections_test.rs  language_aliases_test.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/fixtures/queries/markdown/pruner/: ignore.scm
crates/cli/tests/fixtures/queries/nix/: injections.scm
crates/cli/tests/fixtures/queries_ignore_target/markdown/pruner/: ignore.scm
crates/cli/tests/fixtures/queries_trim/nix/: injections.scm
crates/cli/tests/fixtures/tests/nix_embeddings/: input.nix  output.nix
crates/cli/tests/fixtures/tests/nix_templated_embeddings/: input.nix  output.nix
crates/cli/tests/fixtures/tests/utf8_docstring/: input.clj  output.clj
crates/plugin-api/: Cargo.toml  README.md
crates/plugin-api/src/: bindings.rs
plugins/align-comments/: .gitignore  Cargo.toml  README.md  justfile
src/: main.rs
src/api/: format.rs  mod.rs  text.rs
src/commands/: format.rs
tests/: format_command_test.rs  format_files_test.rs
tests/fixtures/tests/format_files/input/: a.clj
tests/fixtures/tests/format_files/output/: a.clj
tests/fixtures/tests/markdown_with_html/: input.md
