[package]
name = "pruner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }

tree-sitter = "0.25"
tree-sitter-loader = "0.25"

rayon = "1"
toml = "0.9"
serde = "1.0"
url = "2"
anyhow = "1"
xdg = "3"

ignore = "0.4"
globset = "0.4"

log = "0.4"
env_logger = "0.11"

[dev-dependencies]

fslock = "0.2"
