[package]
name = "pruner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }

tree-sitter = "0.25"
tree-sitter-loader = "0.25"

wasmtime = "40"
wasmtime-wasi = "40"

rayon = "1"
toml = "0.9"
serde = "1.0"
url = "2"
anyhow = "1"
xdg = "3"
sha2 = "0.10"
ureq = "2"

ignore = "0.4"
globset = "0.4"

log = "0.4"
env_logger = "0.11"

# Used to support Tree-sitter query directives like `#gsub!` which rely on Lua pattern syntax.
lua-pattern = { version = "0.1.3", features = ["to-regex"] }
regex = "1"

[dev-dependencies]

fslock = "0.2"
